fixing header spacing title and such
Former-commit-id: 952404e0dd96af75390b16858a29403e758ce8c9 [formerly 2ef76fa5bead519b752875e3315820367d9ed448] [formerly 7c900cdf93962af591f41e73995be9f49a6db9f9 [formerly f48611bb76b2526a929ea40dc04982a58bccdf1a]]
Former-commit-id: 92372b22e29b9387348b15c72e632151d672d6b1 [formerly c0e74d6be844d2d387c0ed2df67b0e646c0b7ee2]
Former-commit-id: 5285f3b2c9cc4318eba3b42f6f0c021ffe0e12af

--- a/public/css/sass/partials/_header.sass
+++ b/public/css/sass/partials/_header.sass
@@ -6,16 +6,16 @@ header#siteheader
 	a
 		color: white
 
-	img#sitelogo
-		display: initial
-		margin: 0 0.05em
-		vertical-align: baseline
-		width: 0.65em
-
 	h1#sitetitle
 		font-weight: 700
 		margin: auto
-		padding-top: 2vh
+		padding-top: 3vh
+
+		img#sitelogo
+			display: initial
+			margin: 0 0.05em
+			vertical-align: baseline
+			width: 0.65em
 
 	p#sitebyline
 		margin: -1rem auto auto
